fixes the IE6 avatar wrapping problem in activity feed punchlist item

--- a/public/stylesheets/v2/ie6.css
+++ b/public/stylesheets/v2/ie6.css
@@ -13,3 +13,7 @@
     margin:0;
     height:35px;
 }
+
+.widget-box-content .activity-feed li {
+    zoom:1;
+}
